# mailing_service

./: .env.sample  README.md  pyproject.toml
config/: settings.py  urls.py
mailing_service/: admin.py  forms.py  models.py  services.py  urls.py  views.py
mailing_service/management/commands/: send_mailing.py
mailing_service/migrations/: 0001_initial.py  0002_alter_mailing_date_end_alter_mailing_date_start_and_more.py  0002_alter_usermail_email.py  0003_alter_mailing_status.py  0003_mailing_owner_mailingattempt_owner_message_owner_and_more.py  0004_alter_mailing_date_end_alter_mailing_date_start.py  0004_alter_mailingattempt_options_and_more.py  0005_alter_mailing_options_alter_mailingattempt_options_and_more.py  0006_alter_mailing_status.py
mailing_service/templates/mailing_service/: basic_design.html  home.html  mailing_add.html  mailing_attempt_detail.html  mailing_delete.html  mailing_detail.html  mailing_send.html  mailing_stop.html  message_confirm_delete.html  message_create.html  message_detail.html  user_mail_confirm_delete.html  user_mail_create.html  user_mail_detail.html  user_register_ban.html  user_register_view.html
users/: admin.py  forms.py  models.py  services.py  urls.py  views.py
users/management/commands/: createadmin.py  creategroup.py
users/migrations/: 0001_initial.py  0002_customuser_phone_number.py  0003_alter_customuser_options.py  0004_alter_customuser_options.py
users/templates/users/: email_confirmation_failed.html  email_confirmation_sent.html  email_confirmed.html  login.html  profile_user.html  register.html  (+2 more)
(+1 files in other folders)
